# 2026-01-13-copilot

solution/Python/: pytest.ini
solution/Python/client/: __init__.py  cli.py
solution/Python/server/: main.py
solution/Python/server/routers/: __init__.py  configure.py  demo.py
solution/Python/shared/: __init__.py  test_logic.py
solution/Python/shared/providers/: __init__.py  configurable.py  injection_molder.py  test_configurable.py
solution/TypeScript/: .gitignore  AGENTS.md
solution/TypeScript/configurations/: machines.json  molder_1.json
solution/configurations/: machines.json  molder_1.json  molder_2.json
starter/Python/: README.md  pyproject.toml
starter/Python/client/: cli.py
starter/Python/server/: __init__.py  main.py
starter/Python/shared/: __init__.py  logic.py
starter/TypeScript/: AGENTS.md  package-lock.json  package.json  readme.md  settings-hierarchy.md  uom-logic.md
