[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configurizer"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
server = "server.main:run"
client = "client.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "server*", "client*"]
